Vault Without Purchase (#173)
* Stub CreateSetupTokenUseCase.

* Add CreatePaymentToken use case.

* Stub out VaultFragment.

* Insert VaultFragment into navigation graph.

* Extract card form from vault fragment.

* Add vault ui state and vault ui model to vault fragment.

* Add additional vault step to VaultFragment.

* Add additional state to allow vaulting by updating the setup token.

* Stub out create payment token method.

* Implement Vault without purchase in Vault Fragment.

* Print Payment token output on vault without purchase.

* Extract PaymentTokenView from VaultFragment.

* Create SetupToken data class in demo app.

* Add Setup token view to vault fragment.

* Add vault success view to vault fragment.

* Scroll to bottom of vault fragment as updates occur.

* Clean up lint errors.

* Fix unit tests and add mockk workaround for spying on java.net.URL instances.

* Update GraphQLClient to take queryname parameter in send method.

* Append query name parameter to DataVaultPaymentMethodTokensAPI GraphQL url.

* Remove references to Vaulting from CardFragment.

* Remove unecessary todo.

* Clean up lint error for blank line.

* Extract CreateSetupTokenForm.

* Extract SetupTokenUpdateForm.

* Extract classes from VaultFragment to clear up lint errors.

* Rename forms in VaultFragment.

* Code cleanup.

* Write first unit test for DataVaultPaymentMethodTokensAPI.

* Add additional spec for optional values.

* Add unit test for parsing GraphQL result.

* Fix lint errors.

* Remove suspend qualifier from CardClient#vault.

* Update CHANGELOG and annotate library private methods to discourage external usage.

* Move graphql_query_update_setup_token.graphql raw resource into CardPayments module.

* Add docs to CardClient for vault related payment methods.

* Move vault method and add unit test for success path.

* Add error case test for CardClient.vault method.

* Remove additional met