@@ -43,7 +43,18 @@ android {
         exclude 'META-INF/LGPL2.1'
     }
 
-    testOptions.unitTests.includeAndroidResources true
+    // Ref: https://stackoverflow.com/a/37593189
+    testOptions {
+        unitTests {
+            includeAndroidResources true
+            all {
+                // workaround for spying on java.net.URL in Http module
+                // Ref: https://mockk.io/doc/md/jdk16-access-exceptions.html
+                jvmArgs("--add-opens", "java.base/java.net=ALL-UNNAMED")
+            }
+        }
+    }
+
 }
 
 dependencies {
